<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:checked="true"
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/bottom_nav_product"
        android:icon="@drawable/product"
        android:title="@string/product" />

    <item
        android:id="@+id/bottom_nav_cart"
        android:icon="@drawable/basket"
        android:title="@string/my_cart" />

    <item
        android:id="@+id/bottom_nav_favourite"
        android:icon="@drawable/star"
        android:title="@string/favourite" />

    <item
        android:id="@+id/bottom_nav_myaccount"
        android:icon="@drawable/user"
        android:title="@string/my_account" />


</menu>
