<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lv_store_area_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.8"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:gravity="center"

                android:background="@drawable/imageview_border"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_store_image_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_weight="1.2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_store_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:gravity="center|start"
                    android:text="@string/user_name"
                    android:textColor="@color/black_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/lv_new"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.6"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/new_icon" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_store_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center|start"
                        android:text="@string/new_icon"
                        android:textColor="@color/orange"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_store_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/coffe"
                android:textColor="@color/light_greyy"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/tv_rating_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center|start"
                    android:text="@string/ten"
                    android:textColor="@color/light_greyy"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pay_store_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/pay_by"
                    android:textColor="@color/light_greyy"
                    android:textSize="13sp" />


                <TextView
                    android:id="@+id/tv_store_pay_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center|start"
                    android:text="@string/cash"
                    android:textColor="@color/light_greyy"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_store_avg_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:text="@string/avg"
                        android:textColor="@color/light_greyy"
                        android:textSize="13sp" />


                    <TextView
                        android:id="@+id/tv_store_avg_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:gravity="center|start"
                        android:text="@string/avg_min"
                        android:textColor="@color/light_greyy"
                        android:textSize="13sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_store_minimum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center|start"
                    android:text="@string/minimum"
                    android:textColor="@color/light_greyy"

                    android:textSize="13sp" />



            </LinearLayout>
            <TextView
                android:id="@+id/tv_store_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/delivary_text"
                android:textColor="@color/light_greyy"
                android:textSize="13sp" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_greyy" />

</LinearLayout>