<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".Fregment.Register_freg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/toolbar_register"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/toolbaar_img"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_email_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:textColorHint="@color/edittextline">

                    <EditText
                        android:id="@+id/edt_reg_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/edittextline" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:passwordToggleTint="@color/edittextline">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_reg_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="16sp"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_reg_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:passwordToggleTint="@color/edittextline">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_reg_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_firstname_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:textColorHint="@color/edittextline">

                    <EditText
                        android:id="@+id/edt_reg_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/firstname"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/edittextline" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_lastname_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:textColorHint="@color/edittextline">

                    <EditText
                        android:id="@+id/edt_reg_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lastname"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textColorHint="@color/edittextline" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_line"
                    android:orientation="horizontal"
                    android:weightSum="4">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_date_reg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@null"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:textColorHint="@color/edittextline">

                    <EditText
                        android:textSize="16sp"
                        android:id="@+id/edt_reg_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date"
                        android:padding="5dp"
                        android:inputType="text"
                        android:background="@null"
                        android:textColor="@color/black"
                        android:textColorHint="@color/edittextline" />
                </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/lv_datepicker"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3.5"
                        android:gravity="bottom"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:id="@+id/iv_calender"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:src="@drawable/calander"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageView"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center|start"
                            android:checked="false"
                            android:text="@string/male"
                            android:textColor="@color/grey"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center|start"
                            android:checked="false"
                            android:layout_marginLeft="20dp"
                            android:text="@string/female"
                            android:textColor="@color/grey"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </RadioGroup>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_receive_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/receive_update"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:weightSum="4">


                    <TextView
                        android:id="@+id/tv_subscribe"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center|start"
                        android:text="@string/subscribe"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="3.2"
                        android:gravity="center|end"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/ck_default"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:button="@drawable/switch_track_selector"
                            android:checked="false"
                            android:hint="6"
                            android:textColorHint="#00ffffff" />

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/edittextline" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="30dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>